--- a/sections/featured-product-spotlight.liquid
+++ b/sections/featured-product-spotlight.liquid
@@ -541,9 +541,7 @@
       "type": "number",
       "id": "heading_size",
       "label": "Heading Size",
-      "default": 28,
-      "min": 10,
-      "max": 50
+      "default": 28
     },
     {
       "type": "color",
@@ -586,9 +584,7 @@
       "type": "number",
       "id": "subheading_size",
       "label": "Subheading Size",
-      "default": 16,
-      "min": 10,
-      "max": 30
+      "default": 16
     },
     {
       "type": "color",
@@ -644,7 +640,7 @@
       "id": "gradient_color_3",
       "label": "Gradient Color 3",
       "default": "#8a3ab9"
-    }
+    },
     {
       "type": "header",
       "content": "Product"
