--- a/sections/custom-blog-listing.liquid
+++ b/sections/custom-blog-listing.liquid
@@ -1,7 +1,12 @@
 <div class="custom-blog-listing" style="padding-top: {{ section.settings.padding_top }}px; padding-bottom: {{ section.settings.padding_bottom }}px;">
   <div class="container">
     <div class="blog-grid blog-layout-{{ section.settings.layout }}">
-      {% assign blog = blogs[section.settings.blog] %}
+      {% comment %}Use current blog if we're on a blog template, otherwise use the selected blog{% endcomment %}
+      {% if template contains 'blog' and blog.handle != blank %}
+        {% assign current_blog = blog %}
+      {% else %}
+        {% assign current_blog = blogs[section.settings.blog] %}
+      {% endif %}
       
       {% if section.settings.show_description and section.settings.description != blank %}
         <div class="blog-description rte">
@@ -9,9 +14,9 @@
         </div>
       {% endif %}
       
-      {% paginate blog.articles by section.settings.posts_per_page %}
+      {% paginate current_blog.articles by section.settings.posts_per_page %}
         <div class="blog-articles">
-          {% for article in blog.articles %}
+          {% for article in current_blog.articles %}
             <div class="blog-article-card">
               <article class="blog-article">
                 {% if section.settings.show_featured_image and article.image %}
