--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -1,180 +1,2 @@
-<div class="article-template" style="padding: 60px 0;">
-  <div class="container">
-    <article class="article" itemscope itemtype="http://schema.org/BlogPosting">
-      {% if article.image %}
-        <div class="article-featured-image-wrapper">
-          <img 
-            srcset="{% if article.image.width >= 350 %}{{ article.image | img_url: '350x' }} 350w,{% endif %}
-                    {% if article.image.width >= 750 %}{{ article.image | img_url: '750x' }} 750w,{% endif %}
-                    {% if article.image.width >= 1100 %}{{ article.image | img_url: '1100x' }} 1100w,{% endif %}"
-            src="{{ article.image | img_url: '750x' }}"
-            sizes="(min-width: 990px) 80vw, 100vw"
-            alt="{{ article.title | escape }}"
-            class="article-image"
-            loading="lazy"
-            width="{{ article.image.width }}"
-            height="{{ article.image.height }}">
-        </div>
-      {% endif %}
-      
-      <div class="article-header">
-        <h1 class="article-title" itemprop="headline">{{ article.title }}</h1>
-        
-        <div class="article-meta">
-          <span class="article-date">
-            <time datetime="{{ article.published_at | date: '%Y-%m-%d' }}" itemprop="datePublished">
-              {{ article.published_at | date: "%B %d, %Y" }}
-            </time>
-          </span>
-          
-          {% if article.author %}
-            <span class="article-author" itemprop="author" itemscope itemtype="http://schema.org/Person">
-              by <span itemprop="name">{{ article.author }}</span>
-            </span>
-          {% endif %}
-        </div>
-      </div>
-      
-      <div class="article-content rte" itemprop="articleBody">
-        {{ article.content }}
-      </div>
-      
-      {% if article.tags.size > 0 %}
-        <div class="article-tags">
-          <span class="article-tags-label">Tags:</span>
-          <ul class="article-tags-list">
-            {% for tag in article.tags %}
-              <li class="article-tag-item">
-                <a href="{{ blog.url }}/tagged/{{ tag | handle }}" class="article-tag-link">{{ tag }}</a>
-              </li>
-            {% endfor %}
-          </ul>
-        </div>
-      {% endif %}
-      
-      <div class="article-navigation">
-        {% if article.previous_article %}
-          <a href="{{ article.previous_article.url }}" class="article-prev">
-            <span class="article-nav-label">Previous</span>
-            <span class="article-nav-title">{{ article.previous_article.title }}</span>
-          </a>
-        {% endif %}
-        
-        {% if article.next_article %}
-          <a href="{{ article.next_article.url }}" class="article-next">
-            <span class="article-nav-label">Next</span>
-            <span class="article-nav-title">{{ article.next_article.title }}</span>
-          </a>
-        {% endif %}
-      </div>
-    </article>
-  </div>
-</div>
-
-<style>
-  .article-template {
-    padding: 60px 0;
-  }
-  
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
-  
-  .article {
-    max-width: 800px;
-    margin: 0 auto;
-  }
-  
-  .article-featured-image-wrapper {
-    margin-bottom: 30px;
-  }
-  
-  .article-image {
-    width: 100%;
-    height: auto;
-    display: block;
-    border-radius: 8px;
-  }
-  
-  .article-header {
-    margin-bottom: 30px;
-  }
-  
-  .article-title {
-    font-size: 32px;
-    margin-bottom: 15px;
-  }
-  
-  .article-meta {
-    font-size: 14px;
-    color: #666;
-    margin-bottom: 20px;
-  }
-  
-  .article-author {
-    margin-left: 10px;
-  }
-  
-  .article-content {
-    font-size: 16px;
-    line-height: 1.6;
-    margin-bottom: 40px;
-  }
-  
-  .article-tags {
-    margin-bottom: 30px;
-  }
-  
-  .article-tags-list {
-    display: inline;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .article-tag-item {
-    display: inline-block;
-    margin-right: 10px;
-  }
-  
-  .article-tag-link {
-    display: inline-block;
-    padding: 5px 10px;
-    background-color: #f5f5f5;
-    border-radius: 4px;
-    font-size: 12px;
-    text-decoration: none;
-    color: #333;
-  }
-  
-  .article-navigation {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 40px;
-    padding-top: 20px;
-    border-top: 1px solid #eee;
-  }
-  
-  .article-prev,
-  .article-next {
-    max-width: 45%;
-    text-decoration: none;
-    color: #333;
-  }
-  
-  .article-nav-label {
-    display: block;
-    font-size: 12px;
-    color: #666;
-    margin-bottom: 5px;
-  }
-  
-  .article-nav-title {
-    font-size: 14px;
-    font-weight: bold;
-  }
-</style>
-
+{% section 'main-article' %}
 {% section 'newsletter' %}
